--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ body {
 	margin: 15px;
 	text-decoration: none;
 	display: inline-block;
+	color: #000;
 	font-weight: bold;
 	padding: 5px;
 	border: 1px solid #333;
