--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 .container {
-	background: #bbb;
+	background: #ddd;
 	width: 900px;
 	margin: 0 auto;
 	border: 1px solid #333;
@@ -44,6 +44,9 @@ body {
 #timer {
 	margin-top: 13px;
 	font-size: 20px;
+}
+#question-image {
+	height: 200px;
 }
 
 /* RESULT AREA */
