--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ body {
 	border: 1px solid #333;
 	width: 400px;
 }
+.answer:hover {
+	background: #333;
+	color: #fff;
+}
 #timer {
 	margin-top: 13px;
 	font-size: 20px;
